--- a/sass/style.scss
+++ b/sass/style.scss
@@ -22,8 +22,9 @@ Les composants
 /////////////////////////// */
 @import "composants/menu";
 @import "composants/carte";
-///////////////////
-/// Layout
-/////////////////////
+
+/* /////////////////////////
+Layout 
+/////////////////////////// */
 @import "layout/principal";
 @import "layout/entete";
