--- a/style.css
+++ b/style.css
@@ -1,16 +1,16 @@
 @charset "UTF-8";
 /*
-Theme Name: 4W4 - Rémy Roger
+Theme Name: 4W4 - Eddy Martin
 Theme URI: https://referenced.ca
-Author: Rémy Roger
-Author URI: https://github.com/RemyRoger
+Author: Eddy Martin
+Author URI: https://github.com/eddytuto
 Description: Thème de base développer dans le cadre du cours 4W4
 Version: 1.0
 Tested up to: 6.2
 Requires PHP: 7.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
-Text Domain: 4w4-remy
+Text Domain: 4w4-eddy
 */
 /* /////////////////////
 Les Variables
@@ -18,16 +18,19 @@ Les Variables
 /* /////////////////////////
 Les composants
 /////////////////////////// */
-.menu ul {
+/* /////////////////////////////////////////// menu principal */
+.menu {
   margin: 0;
   padding: 0;
+  list-style-type: none;
 }
-.menu ul li {
+.menu__li {
   display: inline-block;
 }
-.menu ul li a {
+.menu__a {
   color: #333;
   text-decoration: none;
+  padding: 2px 5px;
 }
 
 /* *******************
@@ -69,4 +72,26 @@ Le composant .carte
 }
 .carte__bouton:hover {
   background-color: #0056b3;
+}
+
+/* /////////////////////////
+Layout 
+/////////////////////////// */
+.global {
+  margin: 0 auto;
+  max-width: 1100px;
+}
+
+.hero {
+  min-height: 100vh;
+  background-image: url("images/maldives.jpg");
+}
+
+.entete {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.entete__nav {
+  display: flex;
 }/*# sourceMappingURL=style.css.map */
