--- a/style.css
+++ b/style.css
@@ -74,6 +74,27 @@ Le composant .carte
   background-color: #0056b3;
 }
 
+.recherche {
+  border: 1px solid rgba(0, 0, 0, 0.05);
+  display: flex;
+  align-items: center;
+}
+.recherche__input {
+  padding: 0;
+  border: none;
+  outline: none;
+  flex: 1;
+  border-left: 1px dotted rgba(0, 0, 0, 0.02);
+}
+.recherche__input:hover {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+.recherche__img {
+  padding: 2px;
+  flex: 0 0 20px;
+  padding: 0 3px;
+}
+
 /* /////////////////////////
 Layout 
 /////////////////////////// */
@@ -94,4 +115,5 @@ Layout
 }
 .entete__nav {
   display: flex;
+  align-items: center;
 }/*# sourceMappingURL=style.css.map */
