--- a/style.scss
+++ b/style.scss
@@ -22,9 +22,11 @@ Les composants
 /////////////////////////// */
 @import "composants/menu";
 @import "composants/carte";
+@import "composants/recherche";
 
 /* /////////////////////////
 Layout 
 /////////////////////////// */
 @import "layout/principal";
 @import "layout/entete";
+@import "layout/footer";
