--- a/layout/_entete.scss
+++ b/layout/_entete.scss
@@ -6,7 +6,35 @@
     &__nav {
         display: flex;
         align-items: center;
+        justify-content: flex-end;
+        flex-direction: column;
+        gap: 0 40px;
+        flex-wrap: wrap;
+        position: static;
+        @media screen and (max-width:$point__rupture) {
+            display: none;
+            flex-direction: column;
+            gap: 30px 0;
+            top: 0;
+            right: 0;
+            height: 30vh;
+            padding-bottom: 20px;
+            background-color: #fff;
+        }
     }
+}
+.burger{
+    display: none;
+    @media screen and (max-width:$point__rupture) {
+        display: block;
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        z-index: 99;
+    }
+}
+.chk__burger:checked ~ .entete__nav{
+    display: flex;
 }
 
 
