--- a/style.css
+++ b/style.css
@@ -20,9 +20,18 @@ Les composants
 /////////////////////////// */
 /* /////////////////////////////////////////// menu principal */
 .menu {
+  flex: 1 1 50%;
+  display: flex;
+  justify-content: flex-end;
+  flex-direction: row;
   margin: 0;
   padding: 0;
   list-style-type: none;
+}
+@media screen and (max-width: 500px) {
+  .menu {
+    flex-direction: column;
+  }
 }
 .menu__li {
   display: inline-block;
@@ -116,4 +125,55 @@ Layout
 .entete__nav {
   display: flex;
   align-items: center;
+  justify-content: flex-end;
+  flex-direction: column;
+  gap: 0 40px;
+  flex-wrap: wrap;
+  position: static;
+}
+@media screen and (max-width: 500px) {
+  .entete__nav {
+    display: none;
+    flex-direction: column;
+    gap: 30px 0;
+    top: 0;
+    right: 0;
+    height: 30vh;
+    padding-bottom: 20px;
+    background-color: #fff;
+  }
+}
+
+.burger {
+  display: none;
+}
+@media screen and (max-width: 500px) {
+  .burger {
+    display: block;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    z-index: 99;
+  }
+}
+
+.chk__burger:checked ~ .entete__nav {
+  display: flex;
+}
+
+/* /////////////////////////
+Base 
+/////////////////////////// */
+a {
+  color: #5a5;
+  text-decoration: none;
+}
+a:hover {
+  color: rgba(0, 0, 0, 0.1);
+}
+a:visited {
+  color: rgba(0, 0, 0, 0.3);
+}
+a:focus {
+  color: rgba(0, 0, 0, 0.3);
 }/*# sourceMappingURL=style.css.map */
