--- a/style.scss
+++ b/style.scss
@@ -1,7 +1,7 @@
 /*
-Theme Name: 4W4 - Eddy Martin
+Theme Name: 4W4 - Rémy Roger
 Theme URI: https://referenced.ca
-Author: Eddy Martin
+Author: Rémy Roger
 Author URI: https://github.com/eddytuto
 Description: Thème de base développer dans le cadre du cours 4W4
 Version: 1.0
